alpha-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: alpha
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: alpha
    spec:
      containers:
      - name: alpha-leo
        image: leodotcloud/swiss-army-knife
        ports:
        - containerPort: 9001
