bravo-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bravo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bravo
    spec:
      containers:
      - name: bravo-leo
        image: leodotcloud/swiss-army-knife
        ports:
        - containerPort: 9002
