charlie-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: charlie
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: charlie
    spec:
      containers:
      - name: charlie-leo
        image: leodotcloud/swiss-army-knife
        ports:
        - containerPort: 9003
