alpha-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpha
  labels:
    app: alpha
spec:
  type: ClusterIP
  ports:
  - name: alphaport
    port: 91
    targetPort: 9001
  selector:
    app: alpha
