bravo-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: bravo
  labels:
    app: bravo
spec:
  type: NodePort
  ports:
  - name: bravoport
    nodePort: 32092
    port: 92
    targetPort: 9002
  selector:
    app: bravo
