ingress-1-simple-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /alpha
        backend:
          serviceName: alpha
          servicePort: 91
