ingress-3-name-based-virtual-hosting.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: name-based-virtual-hosting
spec:
  rules:
  - host: alpha.apps.mydomain.com
    http:
      paths:
      - backend:
          serviceName: alpha
          servicePort: 91
  - host: bravo.apps.mydomain.com
    http:
      paths:
      - backend:
          serviceName: bravo
          servicePort: 92
